ooo-build-2.1.5

    + bug fixes:
	+ bridges cleanup & float fix for 64-bit (Jan)
	+ crash when opening files up over sftp connection (Michael)
	+ prefixes in Hungarian translation (Petr)
	+ crashes when trying to open an exported mail (Florian)
	+ pictures disappeared when saved documents loaded from .docx (Florian)
    + Win32 bits:
	+ more versioning problems
	+ small fix in the ODMA stuff
    + updated Novell bits (Tor)

ooo-build-2.1.4

    + bug fixes:
	+ improved workaround for media:// files (Jan)
	+ removed problematic %%Title in the generated postscript (Michael)
    + VBA bits:
	+ fix core with Range.Areas collection (Noel)
	+ fix erase for redim (Noel)
	+ improve 'like' implementation (Caolan, Noel)
	+ problem with compare of objects (Noel)
    + build bits:
	+ optional build with system libwpd and libwps (Hanno, Fridrich)
    + Win32 bits:
	+ installer support for more languages (Tor)
	+ versioning (Tor)
    + updated Debian, Mandriva, Giuseppe, Novell bits (Rene, Tor)

ooo-build-2.1.3

    + bug fixes:
	+ random crashes when loading .docx documents (Florian, Tor)
    + Win32 bits:
	+ support for odf-converter-1.0.0 (Tor)
    

ooo-build-2.1.2

    + features:
	+ MS Works Wordprocessing Document (.wps) import filter (Fridrich)
    + bug fixes:
	+ import of control on userform with rowsource fails (Noel)
	+ make sure that 'AutoExtension' is not disabled (Michael)
	+ crash when loading some documents (Michael)
	+ too large toggles (Michael)
	+ various small fixes (Michael)
	+ some more stability fixes in libwpd (Fridrich)
	+ correct icon for main OpenOffice.org menu entry (Jakub, Petr)
    + VBA bits:
	+ illegal access to undefined dimensions (Noel)
	+ correct implementation of Range.PrintOut method (Noel)
	+ add 'LIKE' implementation (Caolan, Noel)
    + build bits:
	+ update to more stable libwpd 0.8.8 (Fridrich)
    + Win32 bits:
	+ some ODMA fixes (Tor)
	+ .docx association & registration (Tor)
    + updated Novell bits (Petr)

ooo-build-2.1.1
