@@ -1,4 +1,4 @@
-AC_INIT(ooo-build, 2.1.5)
+AC_INIT(ooo-build, 2.1.6)
 AC_PREREQ(2.51)
 AC_CONFIG_SRCDIR(bin/build-ooo)
 AC_PREFIX_DEFAULT(/usr)
@@ -674,12 +674,18 @@ fi
 AC_SUBST(OOO_STRIP)
 
 ENABLE_OPENXML="no"
+ADD_OPENXML_PRESENTATION_MIME=
+ADD_OPENXML_SPREADSHEET_MIME=
 ADD_OPENXML_WORD_MIME=
 if test "$enable_openxml" = "yes"; then
     ENABLE_OPENXML="yes"
-    ADD_OPENXML_WORD_MIME='\;application/vnd.openxmlformats-officedocument.wordprocessingml.document'
+    ADD_OPENXML_PRESENTATION_MIME=\;application/vnd.ms-powerpoint.slideshow.macroEnabled.12\;application/vnd.openxmlformats-officedocument.presentationml.slideshow\;application/vnd.ms-powerpoint.presentation.macroEnabled.12\;application/vnd.openxmlformats-officedocument.presentationml.presentation\;application/vnd.ms-powerpoint.template.macroEnabled.12\;application/vnd.openxmlformats-officedocument.presentationml.template
+    ADD_OPENXML_SPREADSHEET_MIME=\;application/vnd.ms-excel.sheet.binary.macroEnabled.12\;application/vnd.ms-excel.sheet.macroEnabled.12\;application/vnd.openxmlformats-officedocument.spreadsheetml.sheet\;application/vnd.ms-excel.template.macroEnabled.12\;application/vnd.openxmlformats-officedocument.spreadsheetml.template
+    ADD_OPENXML_WORD_MIME='\;application/vnd.ms-word.document.macroEnabled.12\;application/vnd.openxmlformats-officedocument.wordprocessingml.document\;application/vnd.ms-word.template.macroEnabled.12\;application/vnd.openxmlformats-officedocument.wordprocessingml.template'
 fi
 AC_SUBST(ENABLE_OPENXML)
+AC_SUBST(ADD_OPENXML_PRESENTATION_MIME)
+AC_SUBST(ADD_OPENXML_SPREADSHEET_MIME)
 AC_SUBST(ADD_OPENXML_WORD_MIME)
 
 
