@@ -20,6 +20,8 @@ clean:
 %: %.in
 	sed -e "s|\@OOO_BINSUFFIX\@|@OOO_BINSUFFIX@|" \
 	    -e "s|\@STARTUPNOTIFY\@|@STARTUPNOTIFY@|" \
+	    -e "s|\@ADD_OPENXML_PRESENTATION_MIME\@|@ADD_OPENXML_PRESENTATION_MIME@|" \
+	    -e "s|\@ADD_OPENXML_SPREADSHEET_MIME\@|@ADD_OPENXML_SPREADSHEET_MIME@|" \
 	    -e "s|\@ADD_OPENXML_WORD_MIME\@|@ADD_OPENXML_WORD_MIME@|" $< > $@
 
 EXTRA_DIST=$(desktop_in_files) \
