@@ -1,3 +1,14 @@
+ooo-build-2.1.6
+
+    + bug fixes:
+	+ fix the pre/post-processing capability for signed documents (Florian)
+	+ optionally associate more OpenXML file formats (Petr)
+    + build bits:
+	+ support more dictionaries (Giuseppe)
+    + Win32 bits:
+	+ improve patchability  (Tor)
+    + updated Gentoo, Mandriva, Novell bits (Andreas, Giuseppe, Tor)
+
 ooo-build-2.1.5
 
     + bug fixes:
